--- a/docs/manual.tex
+++ b/docs/manual.tex
@@ -2618,7 +2618,7 @@ program point $occ$. The instruction $\nonterm{ins}$ can be
   &\texttt{event\_abort}\ \nonterm{ident}\\
 &\texttt{if }\nonterm{cond}\texttt{ then }\nonterm{ins}\ [\texttt{else }\nonterm{ins}]\\
 &\texttt{let }\nonterm{pattern} \texttt{ = }\nonterm{term}\ \texttt{in}\ \nonterm{ins}\ [\texttt{else }\nonterm{ins}]\\
-&\nonterm{ident}[\texttt{:}\nonterm{ident}] \texttt{ <- }\nonterm{term}[\texttt{;}\nonterm{ins}]\\
+&\nonterm{basicpat} \texttt{ <- }\nonterm{term}[\texttt{;}\nonterm{ins}]\\
   &\texttt{find}[\texttt{[unique]}]\ \nonterm{findbranch}\ (\texttt{orfind }\nonterm{findbranch})^*\ [\texttt{else }\nonterm{ins}]\\
   &\texttt{(}\nonterm{ins}\texttt{)}\\
   &\tag{empty}
