new command assume replace (suggested by B. Lipp)

--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,8 @@ Version
 - Allow x1, ..., xn:T instead of x1:T, ..., xn:T to lighten type declarations
   of variables when they have the same type.
 - Added the command "use_variable x1 ... xn".
+- Added the command "assume replace" (variant of "replace" that does
+  not check that the replacement is correct, to experiment).
 - Extended the "insert" command to insert several tests, assignments
   as well as event_abort in a single command. Inserting
      find ... then/else let x = ...
