--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ of the cryptographic protocol verifier.
 
 Version
 
+- When a proof of equivalence fails, CryptoVerif explains where the
+  two games differ.
 - When a program point is designated by "before ...", "before_nth ...",
   "after ...", "after_nth ...", the regular expression is now matched
   on a process in which only process occurrences are displayed (not
@@ -40,7 +42,7 @@ Version
 - Fixed bug in computation of probabilities for collision statements.
 - Fixed bug in transformation of find[unique] inside a branch of
   find[unique]: required "defined" conditions were sometimes missing.
-- Fixed bugs in command focus, which could cause an internal error.
+- Fixed several bugs that could cause internal errors.
 
 Version 2.02
 
